# delta-exchange-copy-trade

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  websocket_orders_positions.py
.github/: dependabot.yml
.github/workflows/: dockerhub.yml  security-scan.yml
