[project]
name = "delta-exchange-copy-trade"
version = "0.1.0"
description = "Copy trades done on delta exchange"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.1.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "websocket-client>=1.8.0",
]
